--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,65 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+    --clr-primary: #FFFFFF;
+    --clr-secondary: #FA6980;
+    --clr-accent: #EBEBEB;
+    --text-uppercase: uppercase;
+    --ff-base: 'Montserrat', sans-serif;
+    --fw-bold: 700;
+    --fw-regular: 400;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.uppercase {
+    text-transform: var(--text-uppercase);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.primary-color {
+    color: var(--clr-primary);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.secondary-color {
+    color: var(--clr-secondary);
 }
 
-.card {
-  padding: 2em;
+.bold {
+    font-weight: var(--fw-bold);
 }
 
-.read-the-docs {
-  color: #888;
+.regular {
+    font-weight: var(--fw-regular);
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+}
+
+html,
+body {
+    height: 100%;
+    font-family: var(--ff-base);
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+    display: block;
+    max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+    font: inherit;
+}
+
+.home-background {
+    background: linear-gradient(to bottom, var(--clr-accent) 50%, var(--clr-primary) 50%);
 }
