--- a/src/css/Blog.css
+++ b/src/css/Blog.css
@@ -1,5 +1,5 @@
 .blog-container {
-    padding: 4rem 5rem;
+    padding: 4rem 8rem;
 }
 
 .blog-title {
@@ -9,25 +9,94 @@
 
 .blog-grid {
     display: grid;
-    grid-template-columns: 1.5fr 1fr;
+    grid-template-columns: 2fr 1fr;
     column-gap: 1rem;
+    row-gap: 2rem;
 }
 
 .time-container {
     display: flex;
     gap: 0.5rem;
+    color: #CBD0D3;
 }
 
 .imagen-blog {
+    object-fit: cover;
+    object-position: center;
     width: 100%;
+    height: 100%;
+    border-radius: 0.25rem;
 }
 
 .tag {
     position: absolute;
-    top: 2rem;
-    left: 2rem;
+    top: 10%;
+    left: 3rem;
 }
 
 .blog-card {
     position: relative;
+    flex: 1;
+}
+
+.bottomtext-container {
+    position: absolute;
+    left: 3rem;
+    bottom: 12%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-right: 2rem;
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.text > h3 {
+    font-size: 1.5rem;
+}
+
+.blog-card-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.column-1 {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    justify-content: space-between;
+}
+
+.column-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 700px) {
+    .blog-container {
+        padding: 0 0 4rem;
+    }
+
+    .blog-title {
+        padding: 4rem 2rem 1.5rem;
+    }
+
+    .blog-grid {
+        grid-template-columns: 100%;
+    }
+
+    .column-2 {
+        display: none;
+    }
+
+    .imagen-blog {
+        height: 25rem;
+    }
 }
