--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -6,12 +6,17 @@
 .footer {
     display: flex;
     justify-content: space-between;
-    margin: 0 5rem;
+    padding: 2rem 8rem;
     width: 100%;
-    padding: 2rem 0;
 }
 
 .socials-container {
     display: flex;
-    gap: 1rem;
+    gap: 1.5rem;
+}
+
+@media screen and (max-width: 700px) {
+    .footer {
+        padding: 2rem 2rem;
+    }
 }
