--- a/src/css/Splash.css
+++ b/src/css/Splash.css
@@ -16,8 +16,8 @@
 .hero-title-container {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    margin: 0 5rem;
+    gap: 2rem;
+    padding: 0 8rem;
     position: absolute;
     top: 20%;
 }
@@ -28,7 +28,7 @@
     align-items: center;
 }
 
-.hero-title > h2 {
+.hero-title > h1 {
     font-size: 3rem;
 }
 
@@ -43,6 +43,15 @@
     gap: 0.8rem;
 }
 
+.hero-subtitle > h3 {
+    font-size: 1.5rem;
+}
+
+.hero-subtitle > p {
+    font-size: 1rem;
+    line-height: 32px;
+}
+
 .cta-box-container {
     border: 2px dashed var(--clr-primary);
     background: rgba(42, 48, 55, 0.45);
@@ -52,9 +61,9 @@
     display: flex;
     flex-direction: column;
     gap: 0.9rem;
-    margin: 0 5rem;
+    margin: 0 8rem;
     position: absolute;
-    bottom: 20%;
+    bottom: 15%;
     right: 0;
 }
 
@@ -101,4 +110,42 @@
     display: grid;
     align-items: center;
     justify-items: center;
+}
+
+@media screen and (max-width: 700px) {
+    .cta-box-container {
+        display: none;
+    }
+    
+    .hero-title-container {
+        padding: 0 2rem;
+        width: 100%;
+        top: 30%;
+    }
+
+    .hero-subtitle > p {
+        display: none;
+    }
+
+    .hero-subtitle > h3 {
+        font-size: 1.25rem;
+    }
+
+    .hero-title > h1 {
+        font-size: 1.5rem;
+    }
+
+    .hero-title > img {
+        width: 1rem;
+        height: 1.5rem;
+    }
+    
+    .line-index {
+        width: 50%;
+    }
+
+    .first-circle {
+        width: 4rem;
+        height: 4rem;
+    }
 }
